--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,11 @@ INCLUDE_DIRECTORIES(.)
 FILE(GLOB_RECURSE SRC_FILES "*.cpp")
 
 ADD_EXECUTABLE(node ${SRC_FILES})
-TARGET_LINK_LIBRARIES(node ${PROJECT_SOURCE_DIR}/bin_${NODE_BUILD_TYPE}/liblua.dylib)
+
+if(CMAKE_HOST_APPLE)
+	TARGET_LINK_LIBRARIES(node ${PROJECT_SOURCE_DIR}/bin_${NODE_BUILD_TYPE}/liblua.dylib)
+elseif(CMAKE_HOST_UNIX)
+	TARGET_LINK_LIBRARIES(node ${PROJECT_SOURCE_DIR}/bin_${NODE_BUILD_TYPE}/liblua.so pthread)
+endif()
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin_${NODE_BUILD_TYPE})
