--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.0)
 
 PROJECT(NODE)
 
+SET(CMAKE_BUILD_TYPE Debug)
 STRING(TOLOWER ${CMAKE_BUILD_TYPE} NODE_BUILD_TYPE) 
 
 SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -g3 -Wall -D_DEBUG")
